user repository and jpa factory